Small ui fixes. Added history of messages.

--- a/app/src/main/res/layout/item_chat_bubble_left.xml
+++ b/app/src/main/res/layout/item_chat_bubble_left.xml
@@ -14,6 +14,8 @@
             android:text="This is a message"
             android:textAppearance="@style/Text.Message"
             android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:textColor="#FFFFFF"
             android:background="@drawable/round_textbubble_left"
