--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,11 @@
 
     <style name="Text.Title" parent="">
         <item name="android:textSize">20sp</item>
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
+    <style name="Text.Profile" parent="">
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Text.Message" parent="">
