--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -7,25 +7,27 @@
                                              tools:context=".view.chat.ChatFragment">
 
 
-    <TextView
-            android:id="@+id/chat_title"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textAlignment="center"
-            android:textAppearance="@style/Text.Title"
-            tools:text="Chatting with Bob"/>
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/messages"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/inputs"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/chat_title"
-    />
+            app:layout_constraintTop_toTopOf="parent">
+        <TextView
+                android:id="@+id/chat_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textAppearance="@style/Text.Title"
+                tools:text="Chatting with Bob"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/messages"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+        />
+    </LinearLayout>
 
     <RelativeLayout
             android:id="@+id/preview_panel"
@@ -65,11 +67,7 @@
 
         <TableRow
                 android:layout_width="fill_parent"
-                android:layout_weight="1">
-        </TableRow>
-        <TableRow
-                android:layout_width="fill_parent"
-                android:layout_weight="1">
+                android:layout_weight="1" android:background="#EFEFEF">
             <android.support.design.widget.FloatingActionButton
                     android:id="@+id/photo_button"
                     android:layout_width="wrap_content"
