--- a/app/src/main/res/layout/item_chat_bubble_left.xml
+++ b/app/src/main/res/layout/item_chat_bubble_left.xml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:orientation="horizontal"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
-    <TextView
-            android:id="@+id/chat_text_left"
-            android:layout_width="0dp"
+
+    <LinearLayout
+            android:id="@+id/chat_bubble_left"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="This is a message"
-            android:padding="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:textColor="#FFFFFF"
             android:background="@drawable/round_textbubble_left"
-    />
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp">
+        <TextView
+                android:id="@+id/chat_text_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="This is a message"
+                android:padding="8dp"
+
+                android:textColor="#FFFFFF"
+                android:background="@drawable/round_textbubble_left"
+        />
+        <ImageView
+                android:id="@+id/imageView_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:adjustViewBounds="true"
+                android:maxHeight="300dp"
+                android:scaleType="fitCenter"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
