--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -26,6 +26,8 @@
                 android:id="@+id/messages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintBottom_toTopOf="@+id/inputs"/>
     </LinearLayout>
 
@@ -53,14 +55,6 @@
                 tools:src="@mipmap/ic_launcher"
                 android:padding="10dp"
         />
-        <TextView
-                android:id="@+id/current_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                app:layout_constraintTop_toTopOf="@id/preview_photo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:padding="10dp"/>
     </RelativeLayout>
     <TableLayout
             android:id="@+id/inputs"
