--- a/app/src/main/res/layout/item_chat_bubble_left.xml
+++ b/app/src/main/res/layout/item_chat_bubble_left.xml
@@ -13,16 +13,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/round_textbubble_left"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp">
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp">
         <TextView
                 android:id="@+id/chat_text_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="This is a message"
                 android:padding="8dp"
-
                 android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:maxEms="15"
+                android:singleLine="false"
                 android:background="@drawable/round_textbubble_left"
         />
         <LinearLayout
@@ -30,19 +32,25 @@
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp">
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical">
             <ImageView
                     android:id="@+id/imageView_left"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:maxHeight="300dp"
-                    android:scaleType="fitCenter"/>
+                    android:maxHeight="400dp"
+                    android:maxWidth="200dp"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"/>
             <TextView
                     android:text="address"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/picture_address_left"
-                    android:padding="8dp"
+                    android:padding="5dp"
+                    android:textSize="10sp"
+                    android:maxEms="15"
+                    android:singleLine="false"
                     android:textColor="#FFFFFF"
                     android:background="@drawable/round_textbubble_left"/>
         </LinearLayout>
