--- a/app/src/main/res/layout/item_chat_bubble_right.xml
+++ b/app/src/main/res/layout/item_chat_bubble_right.xml
@@ -13,15 +13,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/round_textbubble_right"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp">
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp">
         <TextView
                 android:id="@+id/chat_text_right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="This is a message"
                 android:padding="8dp"
-
+                android:textSize="16sp"
+                android:maxEms="15"
+                android:singleLine="false"
                 android:textColor="#FFFFFF"
                 android:background="@drawable/round_textbubble_right"
         />
@@ -30,20 +32,24 @@
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp">
+                android:layout_margin="5dp">
             <ImageView
                     android:id="@+id/imageView_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:maxHeight="300dp"
-                    android:scaleType="fitCenter"/>
+                    android:maxHeight="400dp"
+                    android:maxWidth="200dp"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"/>
             <TextView
                     android:text="address"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/picture_address_right"
-                    android:padding="8dp"
-
+                    android:padding="5dp"
+                    android:textSize="10sp"
+                    android:maxEms="15"
+                    android:singleLine="false"
                     android:textColor="#FFFFFF"
                     android:background="@drawable/round_textbubble_right"/>
         </LinearLayout>
