Small fix for Google Pixel.

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -50,8 +50,8 @@
                 app:backgroundTint="@color/colorPrimary"/>
         <ImageView
                 android:id="@+id/preview_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 tools:src="@mipmap/ic_launcher"
                 android:padding="10dp"
         />
