--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
             android:id="@+id/navigation_home"
@@ -15,5 +15,10 @@
             android:id="@+id/navigation_profile"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="@string/navigation_my_profile"/>
+
+
+    <item   android:title="@string/navigation_stats"
+            android:id="@+id/navigation_stats"
+            android:icon="@android:drawable/ic_menu_info_details"/>
 
 </menu>
